--- a/public/package.json
+++ b/public/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "razvivay-miniapp",
-  "version": "1.0.0",
-  "description": "Telegram Mini App для развития детей",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "node-telegram-bot-api": "^0.64.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8"
   }
